--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,11 @@
-<h1>My recipes</h1>
+<h1>My Recipes</h1>
 <%= content_tag :p, @user.name %>
+<%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete } %>
+<%= link_to 'Edit Profile',  edit_user_registration_path %>
 <ul>
 <% @recipes.each do |recipe|%>
   <li>
-    <h3><%= link_to recipe.name, recipe_show_path(recipe.id)%><h3>
+    <h3><%= link_to recipe.name, recipes_show_path(recipe.id)%><h3>
     <%= button_to 'Remove', delete_recipe_path(recipe.id), method: :delete%>
     <%= content_tag :p, recipe.description %>
   </li>
