--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .container {
@@ -58,4 +59,50 @@ td {
   border: 1px solid black;
   padding: 8px;
   text-align: left;
+}
+
+.navbar {
+  width: 100%;
+  height: 80px;
+  background-color: #03254c;
+  padding: 0 20px;
+  color: #fff;
+}
+
+.nav-title {
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 3px;
+  cursor: pointer;
+}
+
+.navbar-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.navbarlinks {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.navbar-ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-link {
+  color: #fff;
+}
+
+.nav-item {
+  list-style: none;
 }
