Add create recipes form and display food table for recipe

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -23,7 +23,6 @@
         <%# <%= button_to 'edit', recipe_food_edit_path(rf) %>
         <%= button_to 'Remove', recipe_food_delete_path(rf), method: :delete %>
       </td>
-      end 
     </tr>
   <% end %>
- 
+</table>
