Add style for sign-up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,3 +106,14 @@ td {
 .nav-item {
   list-style: none;
 }
+
+.signup-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 20px;
+}
+
