--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,3 +81,20 @@ td {
   margin: 20px;
 }
 
+.foods-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 20px;
+}
+
+.foods-add {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+  width: 30%;
+}
+
