--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,25 +1,27 @@
-To display list of food: views/foods/index.html.erb
-
-<%= link_to "Add new food", new_food_path %>
-<div class="foods-list">
-  <table class="table-food">
-    <thead>
-      <th>Name</th>
-      <th>Measurement Unit</th>
-      <th>Unit Price</th>
-      <th>Actions</th>
-    </thead>
-    <tbody>
-      <% @foods.each do |food| %>
-        <tr>
-          <td><%= food.name %></td>
-          <td><%= food.measurement_unit %></td>
-          <td><%= food.price %></td>
-          <td>
+<div class="foods-wrapper">
+  <div class="foods-add">
+    <%= link_to "Add new food", new_food_path %>
+  </div>
+  <div class="foods-list">
+    <table class="table-food">
+      <thead>
+        <th>Name</th>
+        <th>Measurement Unit</th>
+        <th>Unit Price</th>
+        <th>Actions</th>
+      </thead>
+      <tbody>
+        <% @foods.each do |food| %>
+          <tr>
+            <td><%= food.name %></td>
+            <td><%= food.measurement_unit %></td>
+            <td><%= food.price %></td>
+            <td>
             <%= button_to 'Remove', delete_food_path(food.id), method: :delete%>
           </td>
           </tr>
-  <% end %>
-    </tbody>
-  </table>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
