--- a/app/views/shopping_list/index.html.erb
+++ b/app/views/shopping_list/index.html.erb
@@ -1,8 +1,8 @@
-<div class="shopping-list-container">
+<div class="shopping-list-wrapper">
     <h1>Shopping List</h1>
-    <div class="shopping-list-summary">
+    <div class="shopping-list-details">
         <p>Amount of food items to buy: </p>
-        <p>Total value of food needed: </p>
+        <p>Total value of food needed: $</p>
     </div>
     <div class="shopping-list">
         <table class="table-shopping-list">
