--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,8 +4,8 @@
 <%= content_tag :p, "Instructions: #{@recipe.description}" %>
 <%= button_to @recipe.public ? 'Is Public' : 'Is Private', recipes_update_path(@recipe), method: :patch%>
 <%= content_tag :p, "By: #{current_user.name}" %>
-<%= button_to 'Generate shopping list', recipes_path %>
-<%= button_to 'Add ingredient', foods_path%>
+<%= button_to 'Generate shopping list', recipes_path(@recipe) %>
+<%= button_to 'Add ingredient', recipe_food_new_path(@recipe)%>
 <hr>
 <table>
   <tr>
@@ -17,20 +17,12 @@
   <% @recipe.recipe_foods.each do |rf| %>
    <tr>
       <td><%= rf.food.name %></td>
-      if editing        
-        <td><%= text_field_tag :quantity, rf.quantity %></td>
-        <td></td>
-        <td>
-          <%= button_to 'submit', recipe_food_update_path(rf), method: :post %>
-        </td>
-      else
-        <td><%= rf.quantity %></td>
-        <td><%= rf.food.price*rf.quantity %></td>
-        <td>
-          <%= button_to 'edit', recipe_food_edit_path(rf) %>
-          <%= button_to 'Remove', recipe_food_delete_path(rf), method: :delete %>
+      <td><%= rf.quantity %></td>
+      <td><%= rf.food.price*rf.quantity %></td>
+      <td>
+        <%# <%= button_to 'edit', recipe_food_edit_path(rf) %> %>
+        <%= button_to 'Remove', recipe_food_delete_path(rf), method: :delete %>
       </td>
-      end 
     </tr>
   <% end %>
 </table>
