--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,6 +1,9 @@
 <%= content_tag :h1, 'Add ingredients' %>
+<%= content_tag :p, @current_recipe_id %>
 
 <%= form_for @recipe_food, url: recipe_food_create_path do |f| %>
+  <%= f.hidden_field :recipe_id, value: @current_recipe_id %>
+
   <%= f.label :foods, 'Select food item' %>
   <%= f.collection_select  :food_id, @foods, :id, :name %>
   <br>
