--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,8 +3,8 @@
     <%= link_to "Recipe", root_path, class: "nav-link nav-title" %>
     <div class="navbarlinks">
       <ul class="navbar-ul">
-        <% if @current_user %>
-         Welcome <%= link_to  @current_user.email, edit_user_registration_path, class: 'nav-link' %>
+        <% if current_user %>
+         Welcome <%= link_to  current_user.name, edit_user_registration_path, class: 'nav-link' %>
          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "logout" %>
         <% else %>
           <li class="nav-item">
