--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,4 +1,4 @@
-<div class="foods-wrapper">
+<div class="wrapper">
   <div class="foods-add">
     <%= link_to "Add new food", new_food_path %>
   </div>
