--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper">
 <h2>Add new food</h2>
 <%= form_with model: @food, url: create_food_path, method: :post, local: true,  scope: :food do |form| %>
   <div class="food-form">
