--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,3 +1,4 @@
+<div class = wrapper>
 <%= content_tag :h1, 'Add ingredients' %>
 
 <%= form_for @recipe_food, url: recipe_food_create_path do |f| %>
