--- a/app/views/recipes/public.html.erb
+++ b/app/views/recipes/public.html.erb
@@ -1,3 +1,4 @@
+<div class = wrapper>
 <%= content_tag :h1, 'Public Recipes' %>
 <ul>
 <% @recipes.each do |recipe|%>
@@ -9,3 +10,4 @@
   </li>
 <% end %>
 </ul>
+</div>
