--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,4 @@
+<div class = wrapper>
 <%= content_tag :h1, @recipe.name %>
 <%= content_tag :p, "Preparation time: #{@recipe.preparation_time}" %>
 <%= content_tag :p, "Cooking Time: #{@recipe.cooking_time}" %>
@@ -29,4 +30,5 @@
       <% end %>
     </tr>
   <% end %>
+</div>
  
