--- a/app/views/shopping_list/index.html.erb
+++ b/app/views/shopping_list/index.html.erb
@@ -1,4 +1,4 @@
-<div class="shopping-list-wrapper">
+<div class="wrapper">
     <h1>Shopping List</h1>
     <div class="shopping-list-details">
         <p>Amount of food items to buy: <%= @combined_foods.count() %></p>
