--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -135,3 +135,46 @@ li {
   text-decoration: none;
   color: black;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, auto);
+  max-width: 40em;
+  margin: 1em;
+  gap: 1em;
+  padding: 1em;
+  border: 2px solid #03254c;
+}
+
+.g-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.g-2 {
+  grid-column: 1/span 2;
+  grid-row: 2;
+}
+
+.g-3 {
+  grid-column: 1/span 2;
+  grid-row: 3;
+}
+
+.g-4 {
+  justify-self: end;
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.g-5 {
+  grid-column: 1;
+  grid-row: last-line;
+}
+
+.g-6 {
+  justify-self: end;
+  grid-column: 2;
+  grid-row: last-line;
+}
